# NEURO_NEST

./: Dockerfile  README.md  docker-compose.yml  main.py  neurohub.db  pyproject.toml  requirements.txt  run.py
ar_reader/: ocr_reader.py
backend/: main.py
backend/models/: database.py
backend/routers/: ar_reader.py  coach.py  mindmap.py  planner.py  voice.py
coach/: emotion_model.py
frontend/: app.py
lang_learning/games/: flashcards.py
mindmap/: generator.py
planner/: parser.py
voice/: recorder.py
